# grindr-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  openapi.json
.github/workflows/: ci.yml  release.yml
src/: geohash.rs  main.rs  openapi.rs  state.rs
src/tools/: endpoints.rs  generic.rs  mod.rs
