[package]
name = "grindr-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for the unofficial Grindr API"
license = "MIT"

[dependencies]
# The Grindr transport: same TLS/HTTP2 fingerprint and header order as the
# Android app, plus login, token refresh and the realtime websocket.
grindr = { git = "https://git.opengrind.org/open-grind/grindr.rs.git", rev = "de671e70fa674ae3baf17042a08e8d34dede45a4" }

# MCP server SDK (stdio transport + tool macros).
rmcp = { version = "1.8", features = ["server", "macros", "transport-io"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-std", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 2
